# nosqo

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  dev-shell.sh  devenv.nix  nao.kdl
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.flox/env/: manifest.toml
.github/workflows/: ci.yml
crates/base/: Cargo.toml
crates/base/src/: cli.rs  error.rs  file_path.rs  lib.rs  result.rs  shared_string.rs  timestamp.rs
crates/base/tests/: error_rendering.rs  result_formatting.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  query.rs  store.rs
crates/engine/src/query/: execute_nql_query.rs  validate_nql_query.rs
crates/engine/src/store/: in_memory_statement_store.rs  statement_store.rs
crates/model/: Cargo.toml
crates/model/src/: date_time_value.rs  date_value.rs  decimal_value.rs  lib.rs  node_id.rs  nql.rs  predicate_id.rs  statement.rs  statement_json.rs  statement_object.rs  statement_pattern.rs  statement_pattern_value.rs  statement_set.rs  value.rs
crates/pal/: Cargo.toml
crates/pal/src/: lib.rs  pal.rs  pal_mock.rs  pal_real.rs  process_command.rs  process_environment_variable.rs  process_event.rs  process_event_sink.rs  process_exited_event.rs  process_output_event.rs  process_output_stream.rs  process_result.rs  process_started_event.rs  process_stream_closed_event.rs
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs  lib.rs  nql.rs  parser.rs  token.rs  token_kind.rs
crates/server/: Cargo.toml  api.http  statements.http
crates/server/src/: entity_detail_attribute.rs  entity_detail_response.rs  entity_search_request.rs  entity_search_response.rs  entity_search_result.rs  error_response.rs  main.rs  query_request_error.rs  query_response.rs  read_knowledge.rs  read_ontogies.rs  server_state.rs
docs/: NOSQO-STATEMENT-JSON.md  NQL-v1-spec.md  PLANS.md  TESTING.md  TEXT-FORMAT.md  UI.md
docs/plans/: 2026-03-22-basic-ui-shell-plan.md  2026-03-22-nql-query-endpoint-plan.md  2026-03-22-ontology-viewer-plan.md  2026-03-22-web-ui-bootstrap-plan.md  2026-03-23-entity-browser-plan.md
docs/plans/completed/: 2026-03-22-nql-query-endpoint-plan.md
knowledge/: Aurelian Expanse.nosqo  The Lord of the Rings.nosqo  World War II.nosqo
knowledge/ontologies/: entity-predicates-ontology.nosqo  event-ontology.nosqo  location-ontology.nosqo  meta-ontology.nosqo  organization-ontology.nosqo  person-ontology.nosqo
scripts/: check-code.sh  dev.sh  enter-devenv.sh  run-codex-sandbox.sh  run-ui-tests-for-nao.sh
ui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: main.tsx  router.test.tsx  router.tsx  styles.css  styles.css.ts
ui/src/test/: render.tsx  (+2 more)
web/: README.md
(+54 files in other folders)
