[workspace]
members = [
    "crates/base",
    "crates/model",
    "crates/pal",
    "crates/server",
]
resolver = "2"

[workspace.dependencies]
anstream = "1.0.0"
axum = "0.8.6"
ecow = "0.2.6"
expect-test = "1.5.1"
ignore = "0.4.25"
notify-debouncer-full = "0.5.0"
parking_lot = "0.12.5"
relative-path = "1.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
