[package]
name = "nosqo-base"
version = "0.1.0"
edition = "2024"
description = "Shared base utilities for the nosqo knowledge database"
license = "MIT"

[dev-dependencies]
expect-test = { workspace = true }

[dependencies]
anstream = {workspace = true}
ecow = {workspace = true}
tracing = {workspace = true}
tracing-error = {workspace = true}
tracing-subscriber = {workspace = true}
parking_lot = {workspace = true}
serde = {workspace = true}
